Fix: Weird behavior of inputs on Safari browsers

--- a/src/styles/base/_reset.less
+++ b/src/styles/base/_reset.less
@@ -34,6 +34,8 @@ input {
   line-height: 40px;
   color: @text-primary;
   @font-bold();
+  user-select: text;
+  -webkit-user-select: text;
 
   &::-webkit-input-placeholder,
   &::-moz-placeholder,
